# RPi_Fan_Controller

./: .gitignore  .gitmodules  CMakeLists.txt  FanController.conf  FanController.service.in  LICENSE  README.md  buildFC.sh  control
debian/: .gitignore  changelog  control  debhelper-build-stamp  fancontroller.substvars  files  rules
sources/: .gitignore  CMakeLists.txt  FC_Commands.h  FC_IO.cpp  FC_IO.h  FC_Log.hpp  FC_Logic.cpp  FC_Logic.h  FanController.cpp  FanControllerDebug  location_config.h  location_config.h.in
